--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     </div> 
 </div>       
     </div>
+    <p>&copy Megan Johns Morning Routine</p>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
